Modify previous recipes and add new recipes
Modified index.html and butter-chicken.html while adding new recipe, burrito.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="./recipes/pudding.html">Pudding Recipe</a></li>
             <li><a href="./recipes/butter-chicken.html">Butter Chicken Recipe</a></li>
+            <li><a href="./recipes/burrito.html">Burrito Recipe</a></li>
         </ul>
         
     </body>
