--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -13,7 +13,7 @@
 
         <h2>Description</h2>
 
-        <p>This recipe will tell you how to make a ridch, fragrant, and spicy Indian butter chicken like no other. The recipe has been put together by several top chefs in India and is a must-try!</p>
+        <p>This recipe will tell you how to make a <em>rich</em>, fragrant, and spicy <strong>Indian</strong> butter chicken like no other. The recipe has been put together by several top chefs in India and is a must-try!</p>
 
         <h2>Ingredients</h2>
 
