Add stylesheet for burrito.html
Use CSS knowledge to add style to a recipe page

--- a/recipes/burrito.html
+++ b/recipes/burrito.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>How to make a Burrito</title>
+        <link rel="stylesheet" href="../styles/burrito.css">
     </head>
 
     <body>
@@ -11,13 +12,13 @@
 
         <img src="https://www.allrecipes.com/thmb/p1e_qhx-A0-21dZDxFyv1zBb-Zw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8538304_Chicken-Fajita-Burrito_thedailygourmet_4x3-d381424d6949448596ef3dc66ce5712b.jpg" alt="image of chicken fajita burrito">
 
-        <h2>Description</h2>
+        <h2 class="heading">Description</h2>
 
-        <p>This recipe is a guide on how you can make a delicious fajita burrito right from the comfort of your home. This recipe is so simple and easy that not trying it would feel like a crime.</p>
+        <p id="desc" class="text">This recipe is a guide on how you can make a delicious fajita burrito right from the comfort of your home. This recipe is so simple and easy that not trying it would feel like a crime.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
 
-        <ul>
+        <ul class="text">
             <li>10 ounces of skinless, boneless, chicken breast.</li>
             <li>1/2 onion</li>
             <li>5 ounces multi-colored pepper strips</li>
@@ -25,9 +26,9 @@
             <li>anything else you want</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class="heading">Steps</h2>
 
-        <ol>
+        <ol class="text">
             <li>Place the ingredients in a resealable plastic bag and seal it. Then squeeze it.</li>
             <li>Preheat the oven to atleast 5000 degrees Celsius. No, this is not a typo, I really do mean 5000 degrees Celsius. This is a very important part of the process.</li>
             <li>Toss your ingredients into the volcano of an oven.</li>
