Style index.html page
Use knowledge new css knowledge about to style index.html page with padding, margin, color, etc.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles/index.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
 
         <ul>
-            <li><a href="./recipes/pudding.html">Pudding Recipe</a></li>
-            <li><a href="./recipes/butter-chicken.html">Butter Chicken Recipe</a></li>
-            <li><a href="./recipes/burrito.html">Burrito Recipe</a></li>
+            <li><a href="./recipes/pudding.html" id="one">Pudding Recipe</a></li>
+            <li><a href="./recipes/butter-chicken.html" id="two">Butter Chicken Recipe</a></li>
+            <li><a href="./recipes/burrito.html" id="three">Burrito Recipe</a></li>
         </ul>
         
     </body>
